use-cases/byo-redis/gateways/enterprise-kgateway-byo-redis.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: enterprise-kgateway-byo-redis
spec:
  controllerName: solo.io/enterprise-kgateway
  parametersRef:
    group: enterprisekgateway.solo.io
    kind: EnterpriseKgatewayParameters
    name: ent-kgateway-byo-redis-params
    namespace: kgateway-system
